<resources>
    <string name="app_name">Boxes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="register_button">Register</string>
    <string name="have_account">Already have an account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_button">Login</string>
    <string name="back_registration">Back to registration</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="select_photo">SELECT PHOTO</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_send">Send</string>
    <string name="menu_recents">Recents</string>
    <string name="add_friend">Add friend</string>
    <string name="no_invites">No invites</string>
    <string name="title_activity_n_av_drawer">NAvDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="rejected">Rejected</string>


</resources>
