<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.boxes.screens.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryLightColor"
        tools:context=".screens.login.LoginFragment">

        <EditText
            android:id="@+id/email_edittext_login"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_edittext_register_login"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            app:layout_constraintBottom_toTopOf="@+id/password_edittext_login"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_login" />

        <EditText
            android:id="@+id/password_edittext_login"
            android:layout_width="347dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_edittext_register_login"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:paddingLeft="16dp"
            android:password="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:onClick="@{() -> viewModel.getEmailAndPass()}"
            android:text="@string/login_button"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintEnd_toEndOf="@+id/password_edittext_login"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_edittext_login"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <TextView
            android:id="@+id/back_registration_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:onClickListener="@{() -> viewModel.toRegisterFragment()}"
            android:text="@string/back_registration"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>